app header logo alignment fixing with heading

--- a/resources/bootstrap3/css/common_styles.css
+++ b/resources/bootstrap3/css/common_styles.css
@@ -43,7 +43,7 @@ body
     font-size: 30px;
 }
 .heading_big_alignment{
-    margin-top: 5px;
+    margin-top: -9px;
 }
 .heading_medium, .heading_medium_thin{
     font-size: 20px;
